# pinn-qmri

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
docs/superpowers/specs/: 2026-06-09-qmri-real-data-track-design.md
notebooks/: 01_validation.ipynb
report/: qmri_real_data.md
results/: metrics.json  real_metrics.json
scripts/: download_data.py  download_real.py  evaluate.py  evaluate_real.py
src/pinn_qmri/: __init__.py  baseline.py  metrics.py  model.py  physics.py  real_data.py  synth.py  train.py
tests/: test_app.py  test_physics.py  test_pipeline.py  test_ranking.py  test_real_data.py
