[project]
name = "pinn-qmri"
version = "0.1.0"
description = "Physics-Informed Neural Network per la stima di parametri quantitativi MRI (rilassometria T2) su dati sintetici, con baseline least-squares per-pixel"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "torch>=2.2",
    "streamlit>=1.36",
    "nibabel>=5.2",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pinn_qmri"]

[tool.ruff]
line-length = 100
target-version = "py312"
# I notebook usano uno stile a celle (import dopo setup di sys.path, statement
# compatti con ';' per le figure): esclusi dal lint per non snaturarli.
extend-exclude = ["notebooks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
